src/objects/VisionModel__c.object
<CustomObject>
    <fields>
        <fullName>Cutoff_Percentage__c</fullName>
        <description>Don&apos;t show predictions with probabilities below this number.</description>
        <inlineHelpText>Don&apos;t show predictions with probabilities below this number.  Will show all if blank</inlineHelpText>
        <label>Cutoff Percentage</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EinsteinID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>the ID on for this model on the Einstein APIs</inlineHelpText>
        <label>EinsteinID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Trained_Model_Id__c</fullName>
        <externalId>true</externalId>
        <label>Einstein Trained Model ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Show_alternative_classifications__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Einstein will reply with the best guess, and if this box is checked, additional possible classifications</description>
        <inlineHelpText>Einstein will reply with the best guess, and if this box is checked, additional possible classifications</inlineHelpText>
        <label>Show alternative classifications</label>
        <type>Checkbox</type>
    </fields>
    <label>Vision Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>EinsteinID__c</columns>
        <columns>Einstein_Trained_Model_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VisionModel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vision Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>